--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,9 @@ code {
     text-align: left;
 }
 
-#tc1, #tc2, #tc3, #tc4, #tc5, #tc6, #tc7{
+#tc1, #tc2, #tc3, #tc4, #tc5, #tc6, #tc7,
+#delay, #cc, #language, #intent, #ssml,
+#name, #url, #url, #object, #action{
   padding: .5em;
   border-left-width: .5em;
   border-left-style: solid;
